--- a/pages/about.html
+++ b/pages/about.html
@@ -6,19 +6,18 @@
 <body class="bg-gray-900 text-white" hx-boost="true">
     {{template "nav.html" .}}
 
-    <div class="mx-auto max-w-2xl space-y-4">
-        <h1>About LearnToCode.fyi</h1>
+    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col">
+        <h1 class="text-4xl text-white">About LearnToCode.fyi</h1>
         <p>
-            LearnToCode.fyi is an annual survey of developers who are actively learning to code. While the majority of
-            our participants are pre-first-job, we also welcome respondents that are just looking to learn new
-            technologies, improve their skills, and maybe move to more senior positions.
+            LearnToCode.fyi is an annual survey of developers who are actively learning to code. Whether you're
+            learning to code for the first time, or you're a seasoned developer we'd love to hear from you.
         </p>
         <p>
-            We are as transparent, open, and private as we can be. This source code for this site is available
+            We aim to be as transparent, open, and private as possible. The source code for this site is available
             on <a href="https://github.com/bootdotdev/learntocodefyi" class="textlink">GitHub here</a>. There
             are no tracking pixels on this site. We do verify an email
             address to prevent duplicate responses, but we don't share your email address with anyone. Your
-            email will only be used to be notify you of results and future surveys (if you choose to opt-in)
+            email will only be used to be notify you of results and future surveys if you choose to opt-in.
         </p>
         <p>
             Results will be published publicly on this site once the survey is closed.
