--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
         <div class="max-w-xl flex flex-col gap-8">
             <div class="text-center">
                 <h1 class="text-4xl text-white">
-                    Welcome to LearnToCode.fyi
+                    LearnToCode.fyi
                 </h1>
                 <h2 class="text-xl text-gray-300">
                     The annual survey of everyone learning to code
