--- a/pages/results.html
+++ b/pages/results.html
@@ -6,8 +6,8 @@
 <body class="bg-gray-900 text-white" hx-boost="true">
     {{template "nav.html" .}}
 
-    <div class="mx-auto max-w-2xl space-y-4">
-        <h1> Survey Results </h1>
+    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col">
+        <h1 class="text-4xl text-white"> Survey Results </h1>
 
         <p>
             We're still collecting responses for the 2024 survey. Check back later for results!
