--- a/pages/subscribed.html
+++ b/pages/subscribed.html
@@ -1,3 +1,3 @@
 <p class="text-white text-xl">
-    You're all set! You'll be sent an email when the results are published.
+    You're all set! You will get an email when the results are published.
 </p>
