--- a/pages/survey.html
+++ b/pages/survey.html
@@ -7,14 +7,14 @@
     {{template "nav.html" .}}
 
     <div class="mx-auto max-w-2xl space-y-4">
-        {{ if eq .QuestionType "singleselect" }}
-        {{ template "singleselect.html" . }}
-        {{ else if eq .QuestionType "multiselect" }}
-        {{ template "multiselect.html" . }}
-        {{ else if eq .QuestionType "ordering" }}
-        {{ template "ordering.html" . }}
-        {{ else if eq .QuestionType "country" }}
-        {{ template "country.html" . }}
+        {{ if .Done }}
+        {{ template "thanks.html" . }}
+        {{ else if and (eq .Question.QuestionType "choice") (gt .Question.ChoiceQuestion.MaxSelection 1) }}
+        {{ template "multichoice.html" .Question }}
+        {{ else if eq .Question.QuestionType "choice" }}
+        {{ template "singlechoice.html" .Question }}
+        {{ else if eq .Question.QuestionType "country" }}
+        {{ template "country.html" .Question }}
         {{ else }}
         <p>Invalid question type.</p>
         {{ end }}
