fix responsiveness and multi choice bug

--- a/cmd/app/pages/index.html
+++ b/cmd/app/pages/index.html
@@ -13,14 +13,15 @@
                     LearnToCode.fyi
                 </h1>
                 <h2 class="text-xl text-gray-300">
-                    The annual survey of everyone learning to code
+                    An annual survey of new coders
                 </h2>
             </div>
 
             <div class="text-gray-400 gap-2 flex flex-col">
                 <p>
-                    Are you learning to code? It doesn't matter if you're just getting started, if you've been learning
-                    for years, or if you're a senior developer learning a new language. We want to hear from you!
+                    Are you learning to code? We want to hear from you if you're just getting started, you've been
+                    learning
+                    for years, or you're a senior developer learning a new language. All are welcome.
                 </p>
             </div>
 
