--- a/cmd/app/pages/about.html
+++ b/cmd/app/pages/about.html
@@ -6,7 +6,7 @@
 <body class="bg-gray-900 text-white" hx-boost="true">
     {{template "nav.html" .}}
 
-    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col">
+    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col px-4">
         <h1 class="text-4xl text-white">About LearnToCode.fyi</h1>
         <p>
             LearnToCode.fyi is an annual survey of developers who are actively learning to code. Whether you're
