--- a/cmd/app/pages/results.html
+++ b/cmd/app/pages/results.html
@@ -6,7 +6,7 @@
 <body class="bg-gray-900 text-white" hx-boost="true">
     {{template "nav.html" .}}
 
-    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col">
+    <div class="mx-auto max-w-2xl space-y-4 text-gray-400 gap-2 flex flex-col px-4">
         <h1 class="text-4xl text-white"> Survey Results </h1>
 
         <p>
