--- a/cmd/app/pages/survey.html
+++ b/cmd/app/pages/survey.html
@@ -6,13 +6,13 @@
 <body class="bg-gray-900 text-white" hx-boost="true">
     {{template "nav.html" .}}
 
-    <div class="mx-auto max-w-2xl space-y-4">
+    <div class="mx-auto max-w-2xl space-y-4 p-4 mt-16">
         {{ if .Done }}
         {{ template "thanks.html" . }}
-        {{ else if and (eq .Question.QuestionType "choice") (gt .Question.ChoiceQuestion.MaxSelection 1) }}
-        {{ template "multichoice.html" .Question }}
-        {{ else if eq .Question.QuestionType "choice" }}
+        {{ else if and (eq .Question.QuestionType "choice") (eq .Question.ChoiceQuestion.MaxSelection 1) }}
         {{ template "singlechoice.html" .Question }}
+        {{ else if eq .Question.QuestionType "choice" }}
+        {{ template "multichoice.html" .Question }}
         {{ else if eq .Question.QuestionType "country" }}
         {{ template "country.html" .Question }}
         {{ else }}
